# fd-zenmoney

./: .gitignore  pyproject.toml
fd_zenmoney/: app.py
fd_zenmoney/schemas/: __init__.py  account.py  budget.py  company.py  country.py  deletion_object.py  diff_object.py  instrument.py  merchant.py  reminder.py  reminder_marker.py  tag.py  transaction.py  user.py  utils.py
fd_zenmoney/services/: __init__.py  zenmoney_service.py
tests/: test_zenmoney_service.py
